--- a/src/main/java/vista/Administrador/paneles/PanelEmpleadoAdm.form
+++ b/src/main/java/vista/Administrador/paneles/PanelEmpleadoAdm.form
@@ -942,8 +942,10 @@
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="1">
+              <StringArray count="3">
                 <StringItem index="0" value="Seleccionar"/>
+                <StringItem index="1" value="ADMIN"/>
+                <StringItem index="2" value="RECEPCIONISTA"/>
               </StringArray>
             </Property>
           </Properties>
